# routes/fix_cam.go
@@ -8,4 +8,9 @@ import (
 
 func FixRoute(app *fiber.App) {
 	app.Post("/api/v1/addcam", camfix.AddCam)
+	app.Get("/api/v1/cams", camfix.GetAllCams)
+	app.Put("/api/v1/update-channel-ids", camfix.UpdateChannelIdsByChannelName)
+	app.Put("/api/v1/updatemac", camfix.UpdateMacUser)
+	app.Patch("/api/v1/type/:id", camfix.UpdateCamera)
+	app.Delete("/api/v1/deletecam/:id", camfix.DeleteCam)
 }
